# simpleboard

./: Cargo.toml
src/: bin.rs  middleware.rs  model.rs
static/: main.css
templates/: list_posts.hbs
